--- a/index.html
+++ b/index.html
@@ -340,6 +340,62 @@
             </div>
           </div>
         </div>
+
+        <div class="project-box">
+          <h3>Rock Paper Scissors Game</h3>
+          <img src="images/rock-paper-scissors.png" alt="Rock Paper Scissors Game">
+          <div class="project-details">
+            <p>An interactive Rock Paper Scissors game with features like:</p>
+            <ul>
+              <li>Player vs Computer Gameplay</li>
+              <li>Score Tracking with Local Storage</li>
+              <li>Auto-Play Mode</li>
+              <li>Keyboard Controls (R, P, S keys)</li>
+            </ul>
+            <div class="project-links">
+              <a href="https://Uday061103.github.io/Rock-Paper-Scissors/" class="btn" target="_blank">Live Demo</a>
+              <a href="https://github.com/Uday061103/Rock-Paper-Scissors" class="btn" target="_blank">
+                <i class="fab fa-github"></i> Code
+              </a>
+            </div>
+            <div class="tech-stack">
+              <span>JavaScript</span>
+              <span>HTML</span>
+              <span>CSS</span>
+              <span>LocalStorage</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="project-box">
+          <h3>Bus Pass Management System</h3>
+          <img src="images/bus-pass.png" alt="Bus Pass Management System">
+          <div class="project-details">
+            <p>A comprehensive web-based bus pass management system built with Django featuring:</p>
+            <ul>
+              <li>Multi-user Authentication (Admin, Students)</li>
+              <li>Digital Bus Pass Generation with QR Code</li>
+              <li>Route Management System</li>
+              <li>Pass Search & Verification</li>
+              <li>Secure Payment Integration</li>
+            </ul>
+            <div class="project-links">
+              <a href="https://bus-pass-management-sysytem.onrender.com" class="btn" target="_blank">Live Demo</a>
+              <a href="https://github.com/Uday061103/Bus-Pass-Management-System" class="btn" target="_blank">
+                <i class="fab fa-github"></i> Code
+              </a>
+            </div>
+            <div class="tech-stack">
+              <span>Django</span>
+              <span>Python</span>
+              <span>SQLite</span>
+              <span>HTML/CSS</span>
+              <span>Bootstrap</span>
+              <span>JavaScript</span>
+              <span>Render</span>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
