--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <link rel="icon" href="images/favicon.png" type="image/png">
     <link rel="apple-touch-icon" href="images/favicon.png">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+    <style>
+        /* Prevent FOUC */
+        body {
+            visibility: visible;
+            opacity: 1;
+            transition: opacity 0.3s ease;
+        }
+    </style>
   </head>
   <body>
     <header class="header">
