--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Uday's Portfolio</title>
+    <!-- Add this style tag before any other CSS -->
+    <style>
+        .sr .reveal-content {
+            visibility: visible !important;
+            opacity: 1 !important;
+            transform: none !important;
+        }
+        
+        body, section, .header, .navbar, .logo, h1, h2, h3, p, .home-content, 
+        .about-content, .skills-container, .project-box, .contact form {
+            visibility: visible !important;
+            opacity: 1 !important;
+        }
+    </style>
+    <!-- Your other CSS files -->
     <link rel="stylesheet" href="index.css" />
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -20,7 +35,7 @@
         }
     </style>
   </head>
-  <body>
+  <body class="sr">
     <header class="header">
       <a href="#" class="logo">Uday</a>
       <nav class="navbar">
