--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
               <i class="fas fa-code"></i>
               <h4>VS Code</h4>
             </div>
-            <div class="tool-box">
+            <!-- <div class="tool-box">
               <i class="fab fa-java"></i>
               <h4>IntelliJ IDEA</h4>
-            </div>
+            </div> -->
             <div class="tool-box">
               <i class="fab fa-python"></i>
               <h4>PyCharm</h4>
@@ -192,7 +192,7 @@
           </div>
         </div>
 
-        <div class="tool-category">
+        <!-- <div class="tool-category">
           <h3>Design Tools</h3>
           <div class="tool-grid">
             <div class="tool-box">
@@ -204,7 +204,7 @@
               <h4>Canva</h4>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div class="tool-category">
           <h3>Deployment Platforms</h3>
@@ -240,6 +240,10 @@
             <div class="tool-box">
               <i class="fab fa-jenkins"></i>
               <h4>Jenkins</h4>
+            </div>
+            <div class="tool-box">
+              <i class="fab fa-selenium"></i>
+              <h4>Selenium</h4>
             </div>
           </div>
         </div>
