--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
               <h4>Jenkins</h4>
             </div>
             <div class="tool-box">
-              <i class="fab fa-selenium"></i>
+              <img src="./images/logos/selenium.svg" alt="Selenium" class="platform-logo">
               <h4>Selenium</h4>
             </div>
           </div>
