--- a/index.html
+++ b/index.html
@@ -129,6 +129,14 @@
           <h3>React</h3>
         </div>
         <div class="skill-box">
+          <i class="fas fa-store"></i>
+          <h3>Redux</h3>
+        </div>
+        <div class="skill-box">
+          <i class="fab fa-code"></i>
+          <h3>NextJs</h3>
+        </div>
+        <div class="skill-box">
           <i class="fab fa-python"></i>
           <h3>Python</h3>
         </div>
