--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <a href="https://www.linkedin.com/in/uday-ubbani-288054253" target="_blank"><i class="fab fa-linkedin"></i></a>
           <a href="https://x.com/uday_ubbani" target="_blank"><i class="fab fa-twitter"></i></a>
         </div>
-        <a href="./assets/Uday_CV.pdf" class="btn" download="Uday_CV.pdf">
+        <a href="./assets/UDAY-Resume (3).pdf" class="btn" download="Uday_CV.pdf">
           <i class="fas fa-download"></i> Download CV
       </a>
       </div>
